--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,19 +13,19 @@
 
             For the backgrounds, you can combine from the bgs folder :D
         -->
-        <article class="slide" id="showcasing" style="background: url('/assets/slider.jpg') repeat-x top center;">
+        <article class="slide" id="showcasing" style="background: url('/assets/images/slider.jpg') repeat-x top center;">
             
             <div class="info">
                 <h2></h2>
             </div>
         </article>
-        <article class="slide" id="ideas" style="background: url('/assets/slider1.jpg') repeat-x top center;">
+        <article class="slide" id="ideas" style="background: url('/assets/images/slider1.jpg') repeat-x top center;">
             <div class="info">
                 <h2></h2>
             </div>
            
         </article>
-        <article class="slide" id="tour" style="background: url('/assets/slider2.jpg') repeat-x top center;">
+        <article class="slide" id="tour" style="background: url('/assets/images/slider2.jpg') repeat-x top center;">
             
             <div class="info">
                 <h2></h2>
